fixed images, update title and did example of tying image visibility to volume

--- a/html-templates/volume.css
+++ b/html-templates/volume.css
@@ -9,6 +9,7 @@ h1 {
 	position:absolute;
 	top:23px;
 	left:50px;
+	z-index: -20;
 }
 
 h2 {
